--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ ul li:hover {
 .part {
     min-height: 100vh;
     background-color: #1F2326;
+    position: relative;
 }
 
 .part h1 {
@@ -108,10 +109,64 @@ ul li:hover {
     color: #000000;
 }
 
-footer {
+.footer {
     padding: 60px;
     background-color: #0D0D0D;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 5;
 }
+.client_image{
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    background-color: #B8BEBF;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 25px; 
+}
+
+.client_image img {
+    width: 100%;
+}
+
+.sizing{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.testimony{
+    display: flex;
+    align-items: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 10px;
+}
+.testimony span img{
+    width: 300px;
+    height:300px;
+    border-radius: 50%;
+    margin-right: 50px;
+    background-color:#1F2326;
+
+}
+.contacts{
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+}
+
+.part iframe{
+    width: 100%;
+    height: 85vw;
+    z-index: 2;
+}
+.contacts h1{
+    text-align: center;
+    color: #000000;
+}
+
